@@ -1,4 +1,5 @@
 4.2.0
+- Added microtime analysis to the float routing.
 
 4.1.2
 - Change: Do not display an empty array, when there are no
